# ffmpeg2theora

./: .gitignore  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.mingw32  README  SConstruct  TODO  build.mac.sh  build_ffmpeg.sh  configure.ac  ffmpeg2theora.1  ffmpeg2theora.c  ffmpeg2theora.pmproj  ffmpegrev  get_ffmpeg.sh  get_ffmpeg_cvs.sh  get_ffmpeg_svn.sh  get_libkate.sh  subtitles.c  subtitles.h  subtitles.txt  theorautils.c  theorautils.h  version.sh
ffmpeg2theora.pmdoc/: 01ffmpeg.xml  index.xml
frontend/: README  Simple Theora Encoder.py  Simple Theora Encoder.rsrc.py  frontendmode.txt  setup.macosx.py
frontend/theoraenc/: addSubtitlesDialog.py  addVideoDialog.py  theoraenc.py
kino_export/: Makefile.am  ffmpeg2theora.sh
patches/: 6to2channel-resample.patch  ffmpeg_ogg_decode.patch  ogg_duration.patch
scons-tools/: crossmingw.py
src/: avinfo.c  avinfo.h  ffmpeg2theora.c  ffmpeg2theora.h  index.c  index.h  iso639.c  libswresample_compat.h  subtitles.c  subtitles.h  theorautils.c  theorautils.h
